--- a/examples/layout/index.html
+++ b/examples/layout/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>soda example - click and hover</title>
-</head>
+    <title>soda example - layout</title>
 <body>
     <div id="axis-chart" class="axis"></div>
     <div id="track-chart" class="chart"></div>
+    <div id="track-chart2" class="chart"></div>
+    <div id="track-chart3" class="chart"></div>
     <script src="main.js"></script>
 </body>
 </html>
