--- a/examples/layout/index.html
+++ b/examples/layout/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>soda example - layout</title>
+</head>
 <body>
     <div id="axis-chart" class="axis"></div>
     <div id="track-chart" class="chart"></div>
